--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
       </footer>
     </div>
   </body>
-  <script src="src/index.js"></script>
+<script src="src/index.js" type="module"></script>
+
 </html>
