--- a/index.html.html
+++ b/index.html.html
@@ -48,9 +48,18 @@
       <footer class="footer">
         <p>
           This project was coded by
-          <a href="#" target="_blank">Fabiana Noll</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/fabi-agn" target="_blank">Fabiana Noll</a>
+          and is
+          <a
+            href="https://github.com/fabi-agn/my-first-project-weather/tree/main"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://my-weather-app-fa.netlify.app/?" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
