--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a href="https://github.com/fabi-agn" target="_blank">Fabiana Noll</a>
           and is
           <a
-            href="https://github.com/fabi-agn/my-first-project-weather/tree/main"
+            href="https://github.com/fabi-agn/my-first-project-weather/blob/main/index.html"
             target="_blank"
           >
             on GitHub</a
