--- a/index.html
+++ b/index.html
@@ -100,11 +100,14 @@
       <footer class="footer">
         <p>
           This project was coded by
-          <a href="https://github.com/fabi-agn" target="_blank">Fabiana Noll</a>
+          <a href="https://github.com/fabi-agn" target="_blank" class="nameF"
+            >Fabiana Noll</a
+          >
           and is
           <a
             href="https://github.com/fabi-agn/my-first-project-weather/blob/main/index.html"
             target="_blank"
+            class="website"
           >
             on GitHub</a
           >
