--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <h1 id="current-city" class="current-city">London</h1>
             <p class="current-details">
               <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              Humidity: <strong id="Humidity">87%</strong>, Wind:
+              <strong id="wind-speed">7.2km/h</strong>
             </p>
           </div>
 
