--- a/index.html
+++ b/index.html
@@ -32,83 +32,36 @@
           <div>
             <h1 id="current-city" class="current-city">London</h1>
             <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong id="Humidity">87%</strong>, Wind:
-              <strong id="wind-speed">7.2km/h</strong>
+              <span id="current-date"></span>,
+              <span id="description"></span>
+              <br />
+              Humidity: <strong id="Humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
 
           <div class="current-temperature">
-            <span class="emoji">☀️ </span
-            ><span class="current-temperature-value" id="current-temperature"
-              >14</span
+            <div id="icon"></div>
+            <span
+              class="current-temperature-value"
+              id="current-temperature"
+            ></span
             ><span class="celsius">°C</span>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Tue</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15º</strong>
-              </div>
-              <div class="weather-forecast-temperature">9º</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Wed</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15º</strong>
-              </div>
-              <div class="weather-forecast-temperature">9º</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Thu</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15º</strong>
-              </div>
-              <div class="weather-forecast-temperature">9º</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Fri</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15º</strong>
-              </div>
-              <div class="weather-forecast-temperature">9º</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Sat</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15º</strong>
-              </div>
-              <div class="weather-forecast-temperature">9º</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer class="footer">
         <p>
           This project was coded by
-          <a href="https://github.com/fabi-agn" target="_blank" class="nameF"
+          <a href="https://github.com/fabi-agn" target="_blank" id="nameF"
             >Fabiana Noll</a
           >
           and is
           <a
             href="https://github.com/fabi-agn/my-first-project-weather/blob/main/index.html"
             target="_blank"
-            class="website"
+            id="website"
           >
             on GitHub</a
           >
