--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
 
           <div class="current-temperature">
-            <div id="icon"></div>
+            <div id="icon" class="emoji"></div>
             <span
               class="current-temperature-value"
               id="current-temperature"
