--- a/index.html
+++ b/index.html
@@ -32,21 +32,19 @@
           <div>
             <h1 id="current-city" class="current-city">London</h1>
             <p class="current-details">
-              <span id="current-date"></span>,
-              <span id="description"></span>
-              <br />
-              Humidity: <strong id="Humidity"></strong>, Wind:
+              <span id="current-date"></span>, <span id="description"></span
+              ><br />
+              Humidity: <strong id="humidity"></strong>, Wind:
               <strong id="wind-speed"></strong>
             </p>
           </div>
 
           <div class="current-temperature">
-            <div id="icon" class="emoji"></div>
-            <span
-              class="current-temperature-value"
-              id="current-temperature"
-            ></span
-            ><span class="celsius">°C</span>
+            <span id="icon" class="emoji"></span>
+            <span class="current-temperature-value" id="current-temperature"
+              >14</span
+            >
+            <span class="celsius">°C</span>
           </div>
         </div>
         <div class="weather-forecast" id="forecast"></div>
@@ -54,24 +52,12 @@
       <footer class="footer">
         <p>
           This project was coded by
-          <a href="https://github.com/fabi-agn" target="_blank" id="nameF"
-            >Fabiana Noll</a
-          >
-          and is
-          <a
-            href="https://github.com/fabi-agn/my-first-project-weather/blob/main/index.html"
-            target="_blank"
-            id="website"
-          >
-            on GitHub</a
-          >
-          and
-          <a href="https://my-weather-app-fa.netlify.app/?" target="_blank"
-            >hosted on Netlify</a
-          >
+          <a href="#" target="_blank">Fabiana Noll</a> and is
+          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
   </body>
-  <script src="src/index.js" type="module"></script>
+  <script src="src/index.js"></script>
 </html>
