--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <span class="celsius">°C</span>
           </div>
         </div>
+
+        <!-- PREVISÃO DOS PRÓXIMOS DIAS -->
         <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer class="footer">
@@ -58,6 +60,6 @@
         </p>
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
-  <script src="src/index.js"></script>
 </html>
